Add script to build all archs
This script will build all variants and re-build only the failed variant
(if any of the variant builds fails) by storing the varant name locally
in the .gitignored file ".build_variant".

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ firmware/cube/stm32f4xx_hal_conf.h
 firmware/cube/usbd_conf.c
 firmware/cube/usbd_conf.h
 
+fs-plugin/.build_variant
 fs-plugin/fpconnect
 fs-plugin/fpconnect.exe
 fs-plugin/fpconnect.res
