Improved (hard) fault handler
Improved fault handler implementation. The stub is implemented in pure
assembly and manages to consistently pass the exact state at the time of
the IRQ to the fault handler. The handler then can dump all information
of interest (register set, especially the PC). It also dumps additional
bus fault register contents and decodes bitfields. This is useful
because for memory faults (e.g., access to invalid memory) the PC may
already have advanced one or several instructions when the fault occurs.
I.e., while it is a synchronous trap, it still shows asynchronous
behavior (this is called an "imprecise" fault in ARM terminology).
Therefore it's very useful to know what kind of fault you're dealing
with (so that debugging does not happen in a place that may be
innocent).

--- a/firmware/qemu/Makefile
+++ b/firmware/qemu/Makefile
@@ -1,5 +1,8 @@
 .PHONY: all clean gdb sim simgdb
 
+vpath %.c ..
+vpath %.s ..
+
 TARGETS := qemu_core
 
 PREFIX := arm-none-eabi-
@@ -10,10 +13,11 @@ AR := $(PREFIX)ar
 GDB := $(PREFIX)gdb
 
 CFLAGS := $(CFLAGS) -std=c11 -Wall -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -Werror=format -Os -g3 -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -mthumb
+CFLAGS += -I../ext-st/include -I../ext-st/include-cmsis -I../ext-st/include-cmsis-dev -include ../library_config.h
 LDFLAGS := -Tgeneric-hosted.ld
 LDFLAGS += -Wl,--gc-sections
 
-OBJS := qemu_core.o syscalls.o ../ivt.o
+OBJS := qemu_core.o syscalls.o ivt.o corefault.o causefault.o fault.o
 
 all: $(TARGETS)
 
