Implementation of debug console
Now RS232 serves a debugging console which gives access to internal
functionality such as debugging of GPIOs in order to trace broken pins
or such. Later planning to add debugging IOMux functionality.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,4 +1,5 @@
 .PHONY: all clean readflash program bindump gdb gdbserver console tests
+.SUFFIXES: .txt
 
 TARGETS := flightpanel flightpanel.bin
 PROCESSOR := STM32F407VGT6
@@ -20,7 +21,7 @@ LDFLAGS := -Tstm32f407.ld
 LDFLAGS += -Wl,--gc-sections
 STATICLIBS := ext-st/stdperiph.a cube/cube.a
 
-OBJS := ivt.o flightpanel.o syscalls.o init.o rs232.o fault.o timer.o rotary.o spi.o usb.o usbd_hid.o i2c.o eeprom.o configuration.o ssd1306.o displays.o surface.o font.o vcr-osd-mono-20.o vcr-osd-mono-30.o instruments.o iomux.o frequencies.o debounce.o stm32f4xx_devid.o stm32f4xx_stackpaint.o corefault.o boundedbuffer.o
+OBJS := pinmap.h ivt.o flightpanel.o syscalls.o init.o rs232.o fault.o timer.o rotary.o spi.o usb.o usbd_hid.o i2c.o eeprom.o configuration.o ssd1306.o displays.o surface.o font.o vcr-osd-mono-20.o vcr-osd-mono-30.o instruments.o iomux.o frequencies.o debounce.o stm32f4xx_devid.o stm32f4xx_stackpaint.o corefault.o boundedbuffer.o debugconsole.o debug.o
 
 all: $(TARGETS)
 
@@ -63,3 +64,5 @@ flightpanel.sym: flightpanel.c
 .s.o:
 	$(CC) $(CFLAGS) -c -o $@ $<
 
+pinmap.h: pinmap.txt
+	./genpinmap.py
