Travis-CI's gcc does not know UB sanitizer
gcc of Travis does not know -fsanitize=undefined or -fsanitize=leak.
Therefore we skip this for now entirely. Ideally, we'd want to detect if
gcc supports the option and use it if available.

--- a/firmware/tests/Makefile
+++ b/firmware/tests/Makefile
@@ -3,7 +3,8 @@
 vpath %.c ..
 
 CFLAGS := -std=c11 -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I..
-CFLAGS += -pie -fPIE -fsanitize=address -fsanitize=undefined -fsanitize=leak
+CFLAGS += -pie -fPIE -fsanitize=address
+#CFLAGS += -fsanitize=undefined -fsanitize=leak
 LDFLAGS :=
 
 TEST_COMMON_OBJS := testbed.o
