Smarter, accurate temperature sensor calculation
The stability of the reference voltage has a great influence on the
outcome of the temperature sensor, much greater than the actual
calibration values for the temperature curves compared to the default
values from the datasheet. Unfortunately, the STM32DISCOVERY has a
series diode between the 3.3V LD3985 LDO, namely a BAT60J. Forward drop
across this ranges from 0.28V to 0.58V -- in other words, we don't know
Vdd (and Vref) at the STM32F407.

Therefore, we use the following approach: We enable Vrefint and measure
it. From it we assume that the original bandgap reference was 1.21 V and
can therefore infer Vref (which, for the STM32DISCOVERY, is identical to
Vdd).

We now use the calibration values at 30°C and 110°C that are stored in
ROM. The recorded values however are recorded at 3.3V. Therefore, we
calculate the 30°C and 110°C *voltages* (assuming a stable 3.3V
reference at factory calibration). With the previously determined Vref,
we can calculate Vtemp from ADU_temp accurately, then use linear
interpolation with the two calibration basepoints to calculate the
temperature.

The overall formula for this was calculated using sage and some
rearrangements have been made to it to lessen the impact of integer
division rounding. It gives good accuracy over the wide temperature
range and never needs to use 64-bit arithmetic for it (i.e., it's
*fast*).

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -22,7 +22,7 @@ LDFLAGS := -Tstm32f407.ld
 LDFLAGS += -Wl,--gc-sections
 STATICLIBS := ext-st/stdperiph.a cube/cube.a
 
-OBJS := pinmap.o ivt.o flightpanel.o syscalls.o init.o rs232.o fault.o timer.o rotary.o spi.o usb.o usbd_hid.o i2c.o eeprom.o configuration.o ssd1306.o displays.o surface.o font.o vcr-osd-mono-20.o vcr-osd-mono-30.o instruments.o iomux.o frequencies.o debounce.o stm32f4xx_devid.o stm32f4xx_stackpaint.o corefault.o boundedbuffer.o debugconsole.o debug.o stm32f4xx_reset.o
+OBJS := pinmap.o ivt.o flightpanel.o syscalls.o init.o rs232.o fault.o timer.o rotary.o spi.o usb.o usbd_hid.o i2c.o eeprom.o configuration.o ssd1306.o displays.o surface.o font.o vcr-osd-mono-20.o vcr-osd-mono-30.o instruments.o iomux.o frequencies.o debounce.o stm32f4xx_devid.o stm32f4xx_stackpaint.o corefault.o boundedbuffer.o debugconsole.o debug.o stm32f4xx_reset.o stm32f407_adc.o stm32f407_tempsensor.o
 ADDITIONAL_DEPENDENCY := pinmap.h
 
 all: $(TARGETS)
