--- a/firmware/tests/Makefile
+++ b/firmware/tests/Makefile
@@ -16,7 +16,8 @@ TEST_OBJS := \
 	test_rotary \
 	test_debounce \
 	test_boundedbuffer \
-	test_testbed
+	test_testbed \
+	test_telemetry
 
 all: $(TEST_COMMON_OBJS) $(TEST_OBJS)
 
@@ -27,6 +28,7 @@ test_font: $(TEST_COMMON_OBJS) surface.o font.o vcr-osd-mono-20.o helper_surface
 test_rotary: $(TEST_COMMON_OBJS) rotary.o
 test_debounce: $(TEST_COMMON_OBJS) debounce.o
 test_boundedbuffer: $(TEST_COMMON_OBJS) boundedbuffer.o
+test_telemetry: $(TEST_COMMON_OBJS) stm32f407_tempsensor.o
 test_testbed: $(TEST_COMMON_OBJS)
 
 test: all
