Auto-reset after writing SRAM
Tell st-flash to reset MCU after writing into SRAM. This happens
automatically when writing Flash, but needs to be manually specified
when writing into SRAM.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -55,8 +55,7 @@ console:
 
 program: flightpanel.bin
 	-killall st-util
-	$(STFLASH) write $< $(WRITE_ADDR)
-	$(STFLASH) reset
+	$(STFLASH) --reset write $< $(WRITE_ADDR)
 
 bindump: flightpanel.bin
 	$(OBJDUMP) -b binary -m armv3m -D $<
