Align timing loop and give an example for SRAM timing
When alignment was off and execution from SRAM, the delay loop took 8
cycles/iteration while for proper alignment, only 6 cycles/iteration are
needed. Therefore, always align the inline assembly code fragment
correctly and give calculations in the text for execution from SRAM.
This means timings for this type of loop will be off by a factor of 1.5
(6 clock cycles versus 4 for execution from flash ROM), but don't bother
adjusting these constants for now (they're in any case ballpark values).

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -53,6 +53,9 @@ gdb:
 console:
 	picocom --baud 115200 /dev/ttyUSB*
 
+reset:
+	$(STFLASH) reset
+
 program: flightpanel.bin
 	-killall st-util
 	$(STFLASH) --reset write $< $(WRITE_ADDR)
