More sophisticated gdb debugging
Extended Cortex-M4 debugging by more sophisticated debugging facility.
Especially do not calculate register offsets manually anymore, but
expedite this task into a submodule. Makes for much cleaner and more
reliable code.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -48,7 +48,7 @@ readflash:
 	$(STFLASH) read firmware.bin 0x08000000 65536
 
 gdb:
-	$(GDB) -d ext-st -d cube flightpanel -ex "source gdb.py" -ex "target extended-remote :4242"
+	$(GDB) -d ext-st -d cube flightpanel -ex "py import sys; sys.path.insert(0, '.'); import cm4gdb" -ex "target extended-remote :4242"
 
 console:
 	picocom --baud 115200 /dev/ttyUSB*
