--- a/firmware/tests/Makefile
+++ b/firmware/tests/Makefile
@@ -10,7 +10,7 @@ ifneq ($(USER),travis)
 # memory range interleaves with an existing memory mapping. ASan cannot proceed
 # correctly. ABORTING."), leading to a broken build. Therefore we do not run
 # sanitizers on Travis.
-CFLAGS += -pie -fPIE -fsanitize=address -fsanitize=undefined -fsanitize=leak
+CFLAGS += -pie -fPIE -fsanitize=address -fsanitize=undefined -fsanitize=leak 
 endif
 LDFLAGS :=
 
@@ -25,7 +25,8 @@ TEST_OBJS := \
 	test_boundedbuffer \
 	test_testbed \
 	test_telemetry \
-	test_bitwise
+	test_bitwise \
+	test_instruments
 
 all: $(TEST_COMMON_OBJS) $(TEST_OBJS)
 
@@ -39,6 +40,7 @@ test_boundedbuffer: $(TEST_COMMON_OBJS) boundedbuffer.o
 test_telemetry: $(TEST_COMMON_OBJS) stm32f407_tempsensor.o
 test_testbed: $(TEST_COMMON_OBJS)
 test_bitwise: $(TEST_COMMON_OBJS)
+test_instruments: $(TEST_COMMON_OBJS) instrument_visuals.o frequencies.o surface.o font.o vcr-osd-mono-20.o vcr-osd-mono-30.o
 
 test: all
 	rm -f tests.log
@@ -49,9 +51,10 @@ clean:
 	rm -f $(TEST_COMMON_OBJS) $(TEST_OBJS) ../*.o *.o
 	rm -f helper_surface.o
 	rm -f tests.log
+	rm -f uitest_instruments
 
 .c:
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $+
+	$(CC) $(CFLAGS) -o $@ $+ $(LDFLAGS)
 
 .c.o:
 	$(CC) $(CFLAGS) -include testbed.h -c -o $@ $<
@@ -59,3 +62,8 @@ clean:
 .s.o:
 	$(CC) $(CFLAGS) -c -o $@ $<
 
+gtk_helper.o: gtk_helper.c
+	$(CC) $(CFLAGS) `pkg-config --cflags gtk+-3.0` -include testbed.h -c -o $@ $<
+
+uitest_instruments: $(TEST_COMMON_OBJS) uitest_instruments.o instrument_visuals.o frequencies.o surface.o font.o vcr-osd-mono-20.o vcr-osd-mono-30.o gtk_helper.o
+	$(CC) $(CFLAGS) -o $@ $+ $(LDFLAGS) `pkg-config --libs gtk+-3.0`
