Implement rounding of "uneven" frequencies
This patch allows us to switch between divisions while simultaneously
approximately retaining the original frequency value. For example, when
switching from a 5 kHz frequency of 123.575 to a 15 kHz division scheme,
it would now round up to 123.585 MHz.

--- a/firmware/tests/Makefile
+++ b/firmware/tests/Makefile
@@ -2,7 +2,7 @@
 
 vpath %.c ..
 
-CFLAGS := -std=c11 -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I..
+CFLAGS := -std=c11 -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I.. -g3
 ifneq ($(USER),travis)
 # On Travis-CI, gcc does not support "undefined" and "leak" sanitizers.
 # Furthermore (and worse, actually), there seems to be a kernel < 4.12.8
