New Travis-CI build scripts
Replace the old .travis.py script by a more robust and
better-to-maintain build system script collection. Also revert the odd
issue of rebuilding repositories. The issue seems to have vanished (?).
Let's try it out in the real world and see what happens.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ cache:
     directories:
         - $HOME/.cache/flightpanel
 
-script: python3 .travis.py
+script: python3 -m travis-deploy --build-everything
 
 env:
     global:
