Change 30pt font to Inconsolata
VCR OSD Mono looks wonderful at 20pt, but horrible at 30pt. Inconsolata
looks a lot better in that regard. Change 30pt font to Inconsolata and
add several improvements on the font generation process. In particular,
allow command-line patching and custom properties of glyphs and
consolidate the "morse" font to become a "symbol" font (because we need
the plusminus sign for the vertical speed indication).

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -30,7 +30,7 @@ WRITE_ADDR := 0x20000000
 LDFLAGS += -Wl,--gc-sections
 STATICLIBS := ext-st/stdperiph.a cube/cube.a
 
-OBJS := pinmap.o iomux_pinmap.o ivt.o flightpanel.o syscalls.o init.o rs232.o fault.o timer.o rotary.o spi.o usb.o usbd_hid.o i2c.o eeprom.o configuration.o ssd1306.o displays.o surface.o font.o vcr-osd-mono-20.o vcr-osd-mono-30.o instruments.o iomux.o frequencies.o debounce.o stm32f4xx_devid.o stm32f4xx_stackpaint.o corefault.o boundedbuffer.o debugconsole.o debug.o stm32f4xx_reset.o stm32f407_adc.o stm32f407_tempsensor.o dsr_tasks.o stm32f4xx_debug.o atomic.o instrument_visuals.o morse-font.o morse.o
+OBJS := pinmap.o iomux_pinmap.o ivt.o flightpanel.o syscalls.o init.o rs232.o fault.o timer.o rotary.o spi.o usb.o usbd_hid.o i2c.o eeprom.o configuration.o ssd1306.o displays.o surface.o font.o vcr-osd-mono-20.o inconsolata-30.o instruments.o iomux.o frequencies.o debounce.o stm32f4xx_devid.o stm32f4xx_stackpaint.o corefault.o boundedbuffer.o debugconsole.o debug.o stm32f4xx_reset.o stm32f407_adc.o stm32f407_tempsensor.o dsr_tasks.o stm32f4xx_debug.o atomic.o instrument_visuals.o symbol-font.o morse.o
 ADDITIONAL_DEPENDENCY := pinmap.h iomux_pinmap.h
 
 all: $(TARGETS)
