Speed up Travis build
Default number of CPUs for Travis environments is two, so use the
recently added parallel build feature to speed things up.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ cache:
     directories:
         - $HOME/.cache/flightpanel
 
-script: python3 -m travis-deploy --build-everything
+script: python3 -m travis-deploy --build-everything --parallel 2
 
 env:
     global:
