Adapt FSX plugin and change general architecture a bit
Adapt FSX plugin to reflect the new thread model. Also change several
things such as locking when printing on stdout/stderr by channeling
debug msgs through a logging facility (which uses mutexes). Separate
OS-specific code that doesn't properly work on Cygwin (usleep never
sleeps for some reason) into a separate module that can be used from all
OSes.

--- a/fs-plugin/Makefile
+++ b/fs-plugin/Makefile
@@ -70,7 +70,7 @@ CFLAGS := -std=c11 $(SHARED_CFLAGS)
 CXXFLAGS := -std=c++11 $(SHARED_CFLAGS)
 LDFLAGS := $(PLATFORM_LDFLAGS)
 
-OBJS := fpconnect.o fsconnection.o fpconnection.o arbiter.o frequencies.o units.o thread.o $(PLATFORM_OBJS)
+OBJS := fpconnect.o fsconnection.o fpconnection.o arbiter.o frequencies.o units.o thread.o logging.o osdeps.o $(PLATFORM_OBJS)
 
 all: $(TARGET)
 
