Some more FSX improvements
Now can get almost all relevant variables from FSX, but still can not
really set them properly -- NAV1 setting for frequency and OBS is
implemented, but still flakey (i.e., changing in the flight panel causes
a change in FS, then FS syncs back to the old value then back to the new
value). Probably not noticable with higher polling frequency, but want
to fix this properly before processing. Trying to flush the event queue
didn't really work as expected.

--- a/fs-plugin/Makefile
+++ b/fs-plugin/Makefile
@@ -3,7 +3,7 @@
 vpath %.c ../firmware
 
 WINDOWS_FSX_TARGET := fpconnect.exe
-WINDOWS_FSX_OBJS := $(addprefix arch/fsx/,simconnect.o simconnect-events.o simconnect-datadefs.o fpconnect.res)
+WINDOWS_FSX_OBJS := $(addprefix arch/fsx/,simconnect.o simconnect-events.o simconnect-datadefs.o bcd.o fpconnect.res)
 LINUX_EMU_TARGET := fpconnect
 LINUX_EMU_OBJS := $(addprefix arch/emulation/,emulator.o)
 LINUX_XPLANE_TARGET := fpconnect.so
