Implement pretty well FSX support
Most of the FSX commands now somewhat work. Active COM switching doesn't
really and XPDR mode isn't integrated with IvAp. Also, I'm not happy
with the glideslope/approach functionality. It's confusing and odd. DME
selection should also be back (since FSX does support it for other
flight models apart from the C172).

--- a/fs-plugin/arch/fsx/fsx-plugin/fsx-plugin.cbp
+++ b/fs-plugin/arch/fsx/fsx-plugin/fsx-plugin.cbp
@@ -59,6 +59,7 @@
 		<Unit filename="../../../fpconnection.hpp" />
 		<Unit filename="../../../fsconnection.cpp" />
 		<Unit filename="../../../fsconnection.hpp" />
+		<Unit filename="../../../globals.hpp" />
 		<Unit filename="../../../inttypes_emulation.h" />
 		<Unit filename="../../../logging.cpp" />
 		<Unit filename="../../../logging.hpp" />
